LPD-67397 buildREST
